--- a/source/Data/scss/config.scss
+++ b/source/Data/scss/config.scss
@@ -195,6 +195,7 @@ kbd {
 	}
 }
 
+
 #menu {
 	position: fixed;
 	top: 0;
@@ -242,28 +243,28 @@ kbd {
 }
 
 #exitApp {
-	@include oneLineControlsHeight (40px);
 	position: absolute;
 	z-index: 99;
-	right: 0;
-	top: 0;
-	width: 40px;
+	right: -80px;
+	top: -80px;
+	width: 200px;
+	height: 200px;
 	font-size: 1.2em;
 	font-weight: 100;
 	text-align: center;
 	padding: 0;
+	border-radius: 50px;
 	&:hover {
+		background: radial-gradient(rgba(255, 0, 0, 0.2), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
 		a {
 			color: $red;
-			background-color: rgba(232, 17, 35, 0.19);
-			border-radius: $oneLineControlsHeight/2;
-			box-shadow: 0 0 160px 0 $red, 0 0 100px 0 $red;
 		}
 	}
 	a {
-		position: relative;
 		display: block;
+		width: 40px;
 		height: 40px;
+		margin: (200px - 40px) / 2;
 		color: $fontColor;
 	}
 }
